--- a/src/components/x/debug.css
+++ b/src/components/x/debug.css
@@ -8,13 +8,11 @@ Created by Andrey Shpigunov on 08.09.2024.
 
 /* CMS debugger style */
 
+
 .debug-info {
   position: fixed;
   z-index: 999999999999;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  inset: 0;
   padding: 4vw;
   background: #00000022;
   overflow: auto;
