--- a/src/components/x/flex.css
+++ b/src/components/x/flex.css
@@ -8,6 +8,33 @@ Created by Andrey Shpigunov on 19.09.2024.
 
 /* Flexbox */
 
+
+/*
+  .flex
+  
+  .flex.fr  (xs,m,l,xl)  - flex row
+  .flex.fc  (xs,m,l,xl)  - flex column
+  .flex.fw  (xs,m,l,xl)  - flex wrap
+  .flex.fnw (xs,m,l,xl)  - flex nowrap
+  
+  .flex.ais  (xs,m,l,xl)  - stretch
+  .flex.aifs (xs,m,l,xl)  - flex start
+  .flex.aic  (xs,m,l,xl)  - center
+  .flex.aife (xs,m,l,xl)  - flex end
+  
+  .flex.jcfs (xs,m,l,xl)  - flex start
+  .flex.jcc  (xs,m,l,xl)  - center
+  .flex.jcfe (xs,m,l,xl)  - flex end
+  .flex.jcsb (xs,m,l,xl)  - space between
+  .flex.jcsa (xs,m,l,xl)  - space around
+  .flex.jcse (xs,m,l,xl)  - space evenly
+  
+  .flex.f[0-10]  (xs,m,l,xl)  - flex
+  .flex.fb[0-10] (xs,m,l,xl)  - flex basis
+  .flex.fg[0-10] (xs,m,l,xl)  - flex grow
+*/
+
+
 .flex {
   display: flex;
   
@@ -38,6 +65,39 @@ Created by Andrey Shpigunov on 19.09.2024.
     }
     & .fg$(i) {
       flex-grow: $(i);
+    }
+  }
+  
+  @media (--xsmall) {
+    
+    &.xs\:fr  { flex-direction: row }
+    &.xs\:fc  { flex-direction: column }
+    &.xs\:fw  { flex-wrap: wrap }
+    &.xs\:fnw { flex-wrap: nowrap }
+    
+    &.xs\:ais  { align-items: stretch }
+    &.xs\:aifs { align-items: flex-start }
+    &.xs\:aic  { align-items: center }
+    &.xs\:aife { align-items: flex-end }
+    
+    &.xs\:jcfs { justify-content: flex-start }
+    &.xs\:jcc  { justify-content: center }
+    &.xs\:jcfe { justify-content: flex-end }
+    &.xs\:jcsb { justify-content: space-between }
+    &.xs\:jcsa { justify-content: space-around }
+    &.xs\:jcse { justify-content: space-evenly }
+    
+    @for $i from 0 to 10 {
+      & .xs\:f$(i) {
+        flex: $(i);
+      }
+      & .xs\:fb$(i) {
+        flex: 0 0 calc($(i) * 10%);
+        max-width: calc($(i) * 10%);
+      }
+      & .xs\:fg$(i) {
+        flex-grow: $(i);
+      }
     }
   }
   
