--- a/src/components/x/grid.css
+++ b/src/components/x/grid.css
@@ -8,6 +8,14 @@ Created by Andrey Shpigunov on 08.09.2024.
 
 /* !- Grid prototype */
 
+
+/*
+  .grid
+  .grid.g[1-12] (xs,m,l,xl)   - columns in grid
+  .grid .c[1-12] (xs,m,l,xl)  - column width
+*/
+
+
 .grid {
   display: grid;
   width: 100%;
@@ -18,10 +26,10 @@ Created by Andrey Shpigunov on 08.09.2024.
     & .c$(i) { grid-column: span $(i) }
   }
   
-  @media (--small) {
+  @media (--xsmall) {
     @for $i from 1 to 12 {
-      &.s\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-      & .s\:c$(i) { grid-column: span $(i) }
+      &.xs\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
+      & .xs\:c$(i) { grid-column: span $(i) }
     }
   }
   
