--- a/src/components/x/scroll.css
+++ b/src/components/x/scroll.css
@@ -6,7 +6,12 @@ Created by Andrey Shpigunov on 27.09.2024.
 ---------------------------*/
 
 
-/* Native CSS horizontal scroller */
+/* Scroll - native CSS horizontal scroller */
+
+
+/*
+  .scroll_x-proximity
+*/
 
 
 :root {
