--- a/src/components/x/typo.css
+++ b/src/components/x/typo.css
@@ -8,21 +8,35 @@ Created by Andrey Shpigunov on 07.09.2024.
 
 /* Typo */
 
+
+/*
+  .h[1-6]
+  .mono
+  .italic
+  .fs[1-9]   step 1 (xs,m,l,xl)  - size in spaces
+  .fs[10-19] step 1 (xs,m,l,xl)  - size in px
+  .fs[20-80] step 2 (xs,m,l,xl)  - size in px
+  .fw[100-900] step 100 (xs,m,l,xl)
+  .ls[0-4] (xs,m,l)
+  .lh[0-9] (xs,m,l)  - values: 1.0-1.9
+*/
+
+
 :root {
   --headers-margin-top: 1.125em;
   --headers-margin-bottom: .625em;
   --headers-font-family: var(--font-family);
   --headers-font-weight: 700;
-  --headers-font-color: var(--font-color, #000);
+  --headers-font-color: var(--font-color);
 
   --h1-font-size: 2.5em;
   --h2-font-size: 2em;
-  --h3-font-size: 1.75em;
-  --h4-font-size: 1.5em;
-  --h5-font-size: 1.25em;
+  --h3-font-size: 1.5em;
+  --h4-font-size: 1.25em;
+  --h5-font-size: 1em;
   --h6-font-size: 1em;
 
-  --h1-line-height: 1.3em;
+  --h1-line-height: 1.3;
   --h2-line-height: 1.4;
 
   --paragraph-margin: 1em;
@@ -34,7 +48,7 @@ Created by Andrey Shpigunov on 07.09.2024.
   
   --blockquote-margin: 2em 0;
   --blockquote-padding: 1em 2em;
-  --blockquote-border: solid 4px var(--font-color);
+  --blockquote-border: solid .25em var(--font-color);
 
   --table-padding: .5em .75em;
   --table-border: 1px solid #ccc;
@@ -166,9 +180,14 @@ table {
 
 /* !- Font styles */
 
+.mono { font-family: monospace }
 .italic { font-style: italic }
 
-@for $i from 8 to 19 {
+@for $i from 1 to 9 {
+  .fs$(i) { font-size: var(--space-$(i)) !important }
+}
+
+@for $i from 10 to 19 {
   .fs$(i) { font-size: $(i)px !important }
 }
 @for $i from 20 to 80 by 2 {
@@ -185,29 +204,35 @@ table {
 .fw800 { font-weight: 800 !important }
 .fw900 { font-weight: 900 !important }
 
-@media (--small) {
+@media (--xsmall) {
   
-  @for $i from 8 to 19 {
-    .s\:fs$(i) { font-size: $(i)px !important }
+  @for $i from 1 to 9 {
+    .xs\:fs$(i) { font-size: var(--space-$(i)) !important }
+  }
+  @for $i from 10 to 19 {
+    .xs\:fs$(i) { font-size: $(i)px !important }
   }
   @for $i from 20 to 80 by 2 {
-    .s\:fs$(i) { font-size: $(i)px !important }
+    .xs\:fs$(i) { font-size: $(i)px !important }
   }
   
-  .s\:fw100 { font-weight: 100 !important }
-  .s\:fw200 { font-weight: 200 !important }
-  .s\:fw300 { font-weight: 300 !important }
-  .s\:fw400 { font-weight: 400 !important }
-  .s\:fw500 { font-weight: 500 !important }
-  .s\:fw600 { font-weight: 600 !important }
-  .s\:fw700 { font-weight: 700 !important }
-  .s\:fw800 { font-weight: 800 !important }
-  .s\:fw900 { font-weight: 900 !important }
+  .xs\:fw100 { font-weight: 100 !important }
+  .xs\:fw200 { font-weight: 200 !important }
+  .xs\:fw300 { font-weight: 300 !important }
+  .xs\:fw400 { font-weight: 400 !important }
+  .xs\:fw500 { font-weight: 500 !important }
+  .xs\:fw600 { font-weight: 600 !important }
+  .xs\:fw700 { font-weight: 700 !important }
+  .xs\:fw800 { font-weight: 800 !important }
+  .xs\:fw900 { font-weight: 900 !important }
 }
 
 @media (--medium) {
   
-  @for $i from 8 to 19 {
+  @for $i from 1 to 9 {
+    .m\:fs$(i) { font-size: var(--space-$(i)) !important }
+  }
+  @for $i from 10 to 19 {
     .m\:fs$(i) { font-size: $(i)px !important }
   }
   @for $i from 20 to 80 by 2 {
@@ -227,7 +252,10 @@ table {
 
 @media (--large) {
   
-  @for $i from 8 to 19 {
+  @for $i from 1 to 9 {
+    .l\:fs$(i) { font-size: var(--space-$(i)) !important }
+  }
+  @for $i from 10 to 19 {
     .l\:fs$(i) { font-size: $(i)px !important }
   }
   @for $i from 20 to 80 by 2 {
@@ -247,7 +275,10 @@ table {
 
 @media (--xlarge) {
   
-  @for $i from 8 to 19 {
+  @for $i from 1 to 9 {
+    .xl\:fs$(i) { font-size: var(--space-$(i)) !important }
+  }
+  @for $i from 10 to 19 {
     .xl\:fs$(i) { font-size: $(i)px !important }
   }
   @for $i from 20 to 80 by 2 {
@@ -267,31 +298,63 @@ table {
 
 /* Letter spacing */
 .ls0  { letter-spacing: 0 !important }
-.ls1  { letter-spacing: .5px !important }
-.ls2  { letter-spacing: 1px !important }
-.ls3  { letter-spacing: 1.5px !important }
-.ls4  { letter-spacing: 2px !important }
+.ls1  { letter-spacing: .0625em !important }
+.ls2  { letter-spacing: .125em !important }
+.ls3  { letter-spacing: .25em !important }
+.ls4  { letter-spacing: .5em !important }
 
-@media (--small) {
-  .s\:ls0  { letter-spacing: 0 !important }
-  .s\:ls1  { letter-spacing: .5px !important }
-  .s\:ls2  { letter-spacing: 1px !important }
-  .s\:ls3  { letter-spacing: 1.5px !important }
-  .s\:ls4  { letter-spacing: 2px !important }
+@media (--xsmall) {
+  .xs\:ls0  { letter-spacing: 0 !important }
+  .xs\:ls1  { letter-spacing: .0625em !important }
+  .xs\:ls2  { letter-spacing: .125em !important }
+  .xs\:ls3  { letter-spacing: .25em !important }
+  .xs\:ls4  { letter-spacing: .5em !important }
 }
-
 @media (--medium) {
   .m\:ls0  { letter-spacing: 0 !important }
-  .m\:ls1  { letter-spacing: .5px !important }
-  .m\:ls2  { letter-spacing: 1px !important }
-  .m\:ls3  { letter-spacing: 1.5px !important }
-  .m\:ls4  { letter-spacing: 2px !important }
+  .m\:ls1  { letter-spacing: .0625em !important }
+  .m\:ls2  { letter-spacing: .125em !important }
+  .m\:ls3  { letter-spacing: .25em !important }
+  .m\:ls4  { letter-spacing: .5em !important }
 }
-
 @media (--large) {
   .l\:ls0  { letter-spacing: 0 !important }
-  .l\:ls1  { letter-spacing: .5px !important }
-  .l\:ls2  { letter-spacing: 1px !important }
-  .l\:ls3  { letter-spacing: 1.5px !important }
-  .l\:ls4  { letter-spacing: 2px !important }
+  .l\:ls1  { letter-spacing: .0625em !important }
+  .l\:ls2  { letter-spacing: .125em !important }
+  .l\:ls3  { letter-spacing: .25em !important }
+  .l\:ls4  { letter-spacing: .5em !important }
+}
+@media (--xlarge) {
+  .xl\:ls0  { letter-spacing: 0 !important }
+  .xl\:ls1  { letter-spacing: .0625em !important }
+  .xl\:ls2  { letter-spacing: .125em !important }
+  .xl\:ls3  { letter-spacing: .25em !important }
+  .xl\:ls4  { letter-spacing: .5em !important }
+}
+
+
+/* Line height */
+@for $i from 0 to 9 {
+  .lh$(i)  { line-height: 1.$(i) !important }
+}
+
+@media (--xsmall) {
+  @for $i from 0 to 8 {
+    .xs\:lh$(i)  { line-height: 1.$(i) !important }
+  }
+}
+@media (--medium) {
+  @for $i from 0 to 8 {
+    .m\:lh$(i)  { line-height: 1.$(i) !important }
+  }
+}
+@media (--large) {
+  @for $i from 0 to 8 {
+    .l\:lh$(i)  { line-height: 1.$(i) !important }
+  }
+}
+@media (--xlarge) {
+  @for $i from 0 to 8 {
+    .xl\:lh$(i)  { line-height: 1.$(i) !important }
+  }
 }
