--- a/src/css/app.css
+++ b/src/css/app.css
@@ -43,11 +43,11 @@ Created by andreyshpigunov on 25.05.2021.
 
 .header {
     z-index: 100;
-    height: 120px;
+    height: 100px;
     will-change: height;
     
-    @media (--small) {
-        height: 100px;
+    @media (--medium) {
+        height: 120px;
     }
 }
 .header_compact {
@@ -66,11 +66,11 @@ Created by andreyshpigunov on 25.05.2021.
     & img {
         display: block;
         width: auto;
-        height: 120px;
+        height: 100px;
         will-change: transform;
         
-        @media (--small) {
-            height: 100px;
+        @media (--medium) {
+            height: 120px;
         }
     }
 }
@@ -171,7 +171,7 @@ code {
 }
 
 
-.dataTable {
+/* .dataTable {
     width: 100%;
     
     & code {
@@ -179,10 +179,10 @@ code {
         font-size: 14px;
         background: none;
     }
-}
+} */
 
 
-.section-plugins {
+/* .section-plugins {
     
     & ul {
         display: flex;
@@ -195,7 +195,7 @@ code {
             font-size: 18px;
         }
     }
-}
+} */
 
 
 .plugins-item {
