--- a/src/components/x/space.css
+++ b/src/components/x/space.css
@@ -10,7 +10,7 @@ Created by Andrey Shpigunov on 20.09.2024.
 
 :root {
   /* Spaces */
-  --space-0:  0;
+  /* --space-0:  0;
   --space-1:  0.25rem;
   --space-2:  0.5rem;
   --space-3:  0.75rem;
@@ -20,5 +20,16 @@ Created by Andrey Shpigunov on 20.09.2024.
   --space-7:  3rem;
   --space-8:  4rem;
   --space-9:  6rem;
-  --space-10: 8rem;
+  --space-10: 8rem; */
+  --space-0:  0;
+  --space-1:  0.4rem;
+  --space-2:  0.8rem;
+  --space-3:  1.2rem;
+  --space-4:  1.6rem;
+  --space-5:  2.4rem;
+  --space-6:  3.2rem;
+  --space-7:  4.8rem;
+  --space-8:  6.4rem;
+  --space-9:  9.6rem;
+  --space-10: 12.8rem;
 }
