--- a/src/css/app.css
+++ b/src/css/app.css
@@ -14,7 +14,7 @@ Created by andreyshpigunov on 25.05.2021.
     --font-color: #000;
     --background-color: #fff;
     --link-transition: all .15s ease-out;
-    /* --table-padding: 2px 6px; */
+    --code-font-size: 14px;
     --code-font-color: #000;
     --code-background-color: #f8f8f8;
 }
@@ -22,6 +22,7 @@ Created by andreyshpigunov on 25.05.2021.
 
 @media (prefers-color-scheme: dark) {
     :root {
+      /* x */
         --font-color: #ddd;
         --background-color: #1a1a1a;
         --link-color: #8bcdff;
@@ -38,7 +39,6 @@ Created by andreyshpigunov on 25.05.2021.
         background-color: #333;
     }
 }
-
 
 
 .header {
@@ -126,7 +126,7 @@ Created by andreyshpigunov on 25.05.2021.
 
 code {
     padding: 2px;
-    /* font-size: 14px; */
+    font-size: var(--code-font-size);
     color: var(--code-font-color);
     background: var(--code-background-color);
 }
